# ethereum_alchemy_pipeline

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.toml  sink-config.json  source-config.json
docker/: docker-compose.draft.yaml  dockerfile
docs/: README.md
notebooks/: 0_pipeline0.ipynb  0_pipeline1.ipynb  0_pipeline2.ipynb  0_web3_output_sample.ipynb  1_mongodb_pl_1.ipynb  1_mongodb_pl_2.ipynb  2_alchemy-3_kafka.ipynb  2_kafka_pl_1.ipynb  3_spark_pl_1.ipynb  3_spark_pl_2.ipynb  test.ipynb  transaction_receipts_20240811_183057.csv  transaction_receipts_20240811_184034.csv  transaction_receipts_20240811_190156.csv
notebooks/superceded/: 0_pipeline2.ipynb  1_mongodb_pl_1.ipynb
scripts/: entrypoint.sh
src/: exception.py  main.py  utils.py
src/components/: alchemy_client.py  csv_writer.py  data_fetcher.py
