[tool.poetry]
name = "ethereum-alchemy-pipeline"
version = "0.1.0"
description = "This package contains functions to extract transaction data from the Ethereum blockchain and saves it to a CSV file."
authors = ["JBrien Barcoma <jb.github22@gmail.com>"]
readme = "README.md"
keywords = ["Ethereum", "Alchemy", "CSV", "Data", "Pipeline", "Kafka"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^6.20.1"
alchemy-sdk = "^0.1.1"
dataclass-wizard = "^0.22.3"
eth_utils = "^2.0.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
polars = "^0.18.0"
kafka-python = "^2.0.2"

[tool.poetry.group.visualization.dependencies]
numpy = "^1.23.0"
seaborn = "^0.12.0"
plotly = "^5.10.0"
matplotlib = "^3.6.0"

[tool.poetry.group.dashboard.dependencies]
streamlit = "^1.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
isort = "^5.10.0"
flake8 = "^5.0.0"
ipykernel = "^6.29.5"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.0.0"
sphinx_readme = "^0.2.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"